--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,7 @@
 body {
 	background-color: rgb(169, 252, 252);
+	padding: 0;
+	margin: 0;
 }
 
 p {
@@ -7,14 +9,55 @@ p {
 	padding: 0;
 }
 
-.modal-container {
+.modal-button {
 	position: absolute;
 	top: 20px;
-right: 20px;
+	right: 20px;
 	display: block;
 	color: azure;
 	text-align: center;
 	font-size: 20px;
+	z-index: 2;
+}
+
+
+
+.modal-container {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  -webkit-animation-name: fadeIn; /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s
+}
+
+@keyframes fadeIn {
+  from {opacity: 0} 
+  to {opacity: 1}
+}
+
+@keyframes slideIn {
+  from {bottom: -300px; opacity: 0}
+  to {bottom: 0; opacity: 1}
+}
+.modal-box {
+  position: fixed;
+  bottom: 0;
+  background-color: #fefefe;
+  width: 100%;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: 0.4s;
+  animation-name: slideIn;
+	animation-duration: 0.4s;
+	text-align: center;
 }
 
 .timer {
@@ -64,6 +107,7 @@ right: 20px;
 	font-size: 1.2rem;
 }
 
-.toggle {
-	display: none;
+.modal {
+	display: block;
+	z-index: 1;
 }
