Connected settings input fields and saved it in a function
Connected everything in the settings page and added them to a function called: userInput. 
Commented majority of the code and added to fix comments where work needs to be done.

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+/* General tags */
 body {
 	background-color: rgb(169, 252, 252);
 	padding: 0;
@@ -13,6 +14,7 @@ p {
 	padding: 0;
 }
 
+/* fix Big mess to clean up */
 .modal-button {
 	position: absolute;
 	top: 20px;
