--- a/css/app.css
+++ b/css/app.css
@@ -79,10 +79,11 @@ p {
 .modal-box-form {
 	display: flex;
 	justify-content: center;
+	padding: 10px 20px;
 	background-color: rgb(169, 252, 252);
 }
 
-.modal-box-form div {
+.modal-box-form > div > div {
 	padding: 10px 10px;
 }
 
@@ -96,6 +97,7 @@ p {
 .modal-box-form-flags div {
 	display: flex;
 	justify-content: center;
+	padding: 10px;
 }
 
 .flags {
@@ -179,4 +181,20 @@ p {
 #uk {
 	display: table-cell;
 	vertical-align: middle;
+}
+
+.sliders {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.sliders > div {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+}
+.slider-time {
+	display: flex;
+	justify-content: space-evenly;
 }
