--- a/css/app.css
+++ b/css/app.css
@@ -198,3 +198,19 @@ p {
 	display: flex;
 	justify-content: space-evenly;
 }
+
+button {
+	height: 70px;
+	width: 70px;
+	background-color: chocolate;
+	border: 2px solid white;
+	border-radius: 20px;
+	color: azure;
+	font-size: 1.3rem;
+	margin: 45px 0 0 25px;
+	cursor: pointer;
+}
+
+button:focus {
+	outline: none;
+}
