Added function hide text when check button is unchecked
Added bigger array of cards back, changed HTML submit button with div, because it was causing issues that I couldn't resolve and added styling to the button. close issue #29

--- a/css/app.css
+++ b/css/app.css
@@ -199,18 +199,15 @@ p {
 	justify-content: space-evenly;
 }
 
-button {
-	height: 70px;
+.button {
+	height: 50px;
 	width: 70px;
 	background-color: chocolate;
 	border: 2px solid white;
 	border-radius: 20px;
 	color: azure;
-	font-size: 1.3rem;
+	font-size: 1.5rem;
+	padding-top: 20px;
 	margin: 45px 0 0 25px;
 	cursor: pointer;
-}
-
-button:focus {
-	outline: none;
 }
