--- a/css/app.css
+++ b/css/app.css
@@ -108,16 +108,28 @@ p {
 }
 
 .timer {
-	margin: 10vh auto 5vh auto;
 	text-align: center;
 	font-size: 8rem;
+	border: 3px solid black;
+	border-radius: 20px;
+	width: fit-content;
+	margin: auto;
+	padding: 0 15px;
+	background-color: chocolate;
+	color: white;
+}
+.timer p {
+	margin-block-start: 0;
+	margin-block-end: 0;
+	line-height: 7rem;
 }
 
 .card-container {
 	text-align: center;
 	width: 30vw;
+	max-height: 400px;
 	padding: 50px 50px 3vh 50px;
-	margin: 0 auto;
+	margin: auto;
 	background-color: beige;
 	border: 3px solid black;
 	border-radius: 50px;
@@ -125,7 +137,7 @@ p {
 
 .card-container-text {
 	font-size: 6rem;
-	padding-bottom: 7vh;
+	padding: 20px 0 30px 0;
 }
 
 .card-container-buttons {
@@ -236,14 +248,16 @@ p {
 }
 
 .players-container {
-	position: absolute;
+	/* 	position: absolute;
 	top: 20%;
-	left: 5%;
+	left: 5%; */
+	margin: auto;
 	text-align: center;
 	background-color: beige;
 	padding: 50px 30px;
 	border: 3px solid black;
 	border-radius: 30px;
+	width: 400px;
 }
 
 #players-title {
@@ -251,7 +265,7 @@ p {
 }
 
 #players {
-	margin: 50px 0 30px 0;
+	/* margin: 50px 0 30px 0; */
 	text-align: left;
 }
 
@@ -264,7 +278,7 @@ p {
 	margin-bottom: 30px;
 	padding: 5px;
 	font-size: 1.6rem;
-	width: 200px;
+	width: 225px;
 	border-radius: 15px;
 	border: 2px solid chocolate;
 	outline: none;
@@ -273,8 +287,36 @@ p {
 .player-list-item {
 	list-style: none;
 	font-size: 2rem;
+	display: flex;
+	justify-content: space-between;
 }
 
 ul {
 	padding-inline-start: 0;
+}
+
+#score-title {
+	margin: 20px 20px 20px 0;
+	text-align: right;
+	font-size: 2.5rem;
+	text-decoration: underline;
+}
+
+.display {
+	display: flex;
+	justify-content: space-around;
+	margin: 10%;
+}
+
+.score-display {
+	display: inline-block;
+	text-align: left;
+	margin-right: 45px;
+	font-size: 2.5rem;
+}
+
+.player-name {
+	display: inline-block;
+	margin-left: 45px;
+	font-size: 2.5rem;
 }
