--- a/css/app.css
+++ b/css/app.css
@@ -14,16 +14,21 @@ p {
 	padding: 0;
 }
 
+ul {
+	padding-inline-start: 0;
+}
+
 /* fix Big mess to clean up */
 .modal-button {
 	position: sticky;
 	top: 20px;
-	left: 95vw;
+	left: 100%;
 	display: block;
 	color: azure;
 	text-align: center;
 	font-size: 20px;
 	z-index: 2;
+	transform: translateX(-30px);
 }
 
 /* bug You can make words to get highlighted
@@ -87,7 +92,7 @@ p {
 	justify-content: space-evenly;
 	padding: 10px 20px;
 	background-color: rgb(169, 252, 252);
-	width: 800px;
+	max-width: 800px;
 	margin: 0 auto;
 }
 
@@ -114,34 +119,35 @@ p {
 
 .timer {
 	text-align: center;
-	font-size: 8rem;
+	font-size: 6rem;
 	border: 3px solid black;
 	border-radius: 20px;
-	width: fit-content;
+	max-width: 300px;
+	min-width: 200px;
 	margin: auto;
-	padding: 0 15px;
+	padding: 10px 15px;
 	background-color: chocolate;
 	color: white;
 }
 .timer p {
-	margin-block-start: 0;
-	margin-block-end: 0;
-	line-height: 7rem;
+
+	line-height: 5rem;
 }
 
 .card-container {
 	text-align: center;
 	width: 30vw;
+	min-width: 360px;
 	padding: 50px 50px 3vh 50px;
-	margin: auto;
+	margin: 0 auto;
 	background-color: beige;
 	border: 3px solid black;
-	border-radius: 50px;
+	border-radius: 30px;
 	display: none;
 }
 
 .card-container-text {
-	font-size: 6rem;
+	font-size: 4rem;
 	padding: 20px 0 30px 0;
 }
 
@@ -162,6 +168,10 @@ p {
 	border: 2px solid white;
 	border-radius: 20px;
 	background-color: chocolate;
+}
+
+.red {
+	background-color: red;
 }
 
 .card-container-buttons a {
@@ -294,10 +304,6 @@ p {
 	justify-content: space-between;
 }
 
-ul {
-	padding-inline-start: 0;
-}
-
 #score-title {
 	margin: 20px 0 20px 0;
 	text-align: right;
@@ -307,8 +313,19 @@ ul {
 
 .display {
 	display: flex;
-	justify-content: space-around;
-	margin: 3% 10% 0 10%;
+	justify-content: space-evenly;
+	margin-top: 30px;
+}
+
+@media only screen and (max-width: 1023px) {
+  .display {
+		flex-direction: column;
+		align-items: space-between;
+	}
+	
+	.card-container-text {
+		font-size: 30px;
+	}
 }
 
 .score-display {
